--- a/src/components/LandingPage/card.css
+++ b/src/components/LandingPage/card.css
@@ -3,11 +3,18 @@
     --input-padding-y: .75rem;
   }
   
-  body {
+  .blue-background {
+    height: 100%;
+    width: 100%;
     background: #007bff;
     background: linear-gradient(to right, #0062E6, #33AEFF);
   }
-  
+
+  body,html,#root{
+    height: 100%;
+    width: 100%;
+  }
+
   .card-signin {
     border: 0;
     border-radius: 1rem;
